# news-agent

./: .env.example  .gitignore  AGENTS.md  NEWS_AGENT.md  NEWS_AGENT_PHASE2.md  NEWS_AGENT_PHASE4.md  Sub-phases.md  main.py  pyproject.toml  sources.yaml  todos.md
.github/workflows/: digest.yml
agent/: fetcher.py  filter.py  publisher.py  scorer.py  sources.py  summarizer.py
migrations/: 004_article_scores.sql
tests/: test_scorer.py
web/: middleware.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/api/subscription/: route.ts
web/app/auth/callback/: route.ts
web/app/dashboard/: DashboardForm.tsx  page.tsx  sign-out-button.tsx
web/app/forgot-password/: page.tsx
web/app/login/: page.tsx
web/app/signup/: page.tsx
web/lib/: sources.ts  types.ts
